# PlantService

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
app/: main.py
app/common/: __init__.py  utils.py
app/common/db/: __init__.py  session.py
app/modules/models/: __init__.py  plant.py  user.py
app/modules/routers/: auth.py  plant_types.py  plants.py  users.py
app/modules/schemas/: plants.py  users.py
